--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postcss": "^7.0.32",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.11.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
