--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"homepage": "http://darnellsylvain.com",
+	"homepage": "http://www.darnellsylvain.com",
 	"name": "portfolio-app",
 	"version": "0.1.0",
 	"private": true,
